Update Linkedin URL

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 	<div class="container  mt-10 container-contact" id="contact">
 		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-phone"></i> 05.</span>Get in Touch</p>
 		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
-			through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
+			through <a href="https://www.linkedin.com/in/daniel-goncalo/" style="color:#64ffda;">Linkedin</a>.</p>
 		<button class="cv-button"><a href="\attachments/CV Daniel Gonçalo.pdf"
 			download="CV_Daniel_Goncalo_2025.pdf"><i class="fa-solid fa-circle-down"></i>Download Resume</a></button>
 	</div>
