--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 	<div class="container  mt-10 container-contact" id="contact">
 		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-phone"></i> 05.</span>Get in Touch</p>
 		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
-			through <a href="https://www.linkedin.com/in/daniel-goncalo/" style="color:#64ffda;">Linkedin</a>.</p>
+			through <a href="https://www.linkedin.com/in/daniel-goncalo/" target="_blank" style="color:#64ffda;">Linkedin</a>.</p>
 		<button class="cv-button"><a href="\attachments/CV Daniel Gonçalo.pdf"
 			download="CV_Daniel_Goncalo_2025.pdf"><i class="fa-solid fa-circle-down"></i>Download Resume</a></button>
 	</div>
@@ -227,12 +227,12 @@
 
 	<footer class="container">
 		<a href="mailto: dany4k@gmail.com"><i class="fa-solid fa-envelope icon-color mr-2"></a></i><a
-			href="https://www.linkedin.com/in/daniel-gonçalo/"><i
-				class="fa-brands fa-linkedin-in icon-color mr-2"></a></i><a href="https://github.com/Dany4k"><i
+			href="https://www.linkedin.com/in/daniel-gonçalo/" target="_blank"><i
+				class="fa-brands fa-linkedin-in icon-color mr-2"></a></i><a href="https://github.com/Dany4k" ><i
 				class="fa-brands fa-github icon-color"></i></a>
 		<br>
 		<a
-			href="https://www.linkedin.com/in/daniel-gonçalo/"><span style="font-size: 16px; color:#8892b0; margin-top: 1%;">Coded by</span>  <span style="font-size: 15px;" color: #64ffda;>Daniel
+			href="https://www.linkedin.com/in/daniel-gonçalo/" target="_blank"><span style="font-size: 16px; color:#8892b0; margin-top: 1%;">Coded by</span>  <span style="font-size: 15px;" color: #64ffda;>Daniel
 				Gonçalo</span></span>
 			</a>
 	</footer>
